--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
+    "axios": "^0.16.1",
     "babel-core": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
+    "browser-sync": "^2.18.12",
     "browserify": "^14.4.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-sass": "^3.1.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "vinyl-source-stream": "^1.1.0"
